@@ -12,6 +12,8 @@ New features
 - New module :mod:`rpy2.interactive.ipython` (so far plotting
   automatically a ggplot2 figure in the iPython's console)
 
+- It is now possible to set the :attr:`rclass`.
+
 
 Relase 2.3.4
 ============
